WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198138
createListFromArrayLike should throw if value is not an object
https://bugs.webkit.org/show_bug.cgi?id=198138
Summary
createListFromArrayLike should throw if value is not an object
Tadeu Zagallo
Reported
2019-05-22 13:44:40 PDT
...
Attachments
Patch
(3.29 KB, patch)
2019-05-22 13:57 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch
(4.63 KB, patch)
2019-05-22 15:02 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.35 KB, patch)
2019-05-22 23:26 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-05-22 13:57:49 PDT
Created
attachment 370440
[details]
Patch
Yusuke Suzuki
Comment 2
2019-05-22 14:05:42 PDT
Comment on
attachment 370440
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=370440&action=review
> Source/JavaScriptCore/runtime/JSObjectInlines.h:42 > + throwTypeError(exec, scope, errorMessage);
Can we throw an error with the other error message like "ArrayLike is not an object"_s? `createListFromArrayLike`'s caller passes the errorMessage related to Symbol / String.
Tadeu Zagallo
Comment 3
2019-05-22 15:02:32 PDT
Created
attachment 370448
[details]
Patch
EWS Watchlist
Comment 4
2019-05-22 16:40:28 PDT
Comment on
attachment 370448
[details]
Patch
Attachment 370448
[details]
did not pass jsc-ews (mac): Output:
https://webkit-queues.webkit.org/results/12262203
New failing tests: stress/proxy-get-own-property-names-should-not-clear-previous-results.js.ftl-no-cjit-no-inline-validate stress/proxy-get-own-property-names-should-not-clear-previous-results.js.dfg-eager-no-cjit-validate stress/proxy-get-own-property-names-should-not-clear-previous-results.js.no-cjit-validate-phases stress/proxy-get-own-property-names-should-not-clear-previous-results.js.dfg-eager stress/proxy-get-own-property-names-should-not-clear-previous-results.js.ftl-eager stress/proxy-get-own-property-names-should-not-clear-previous-results.js.ftl-no-cjit-b3o0 stress/proxy-get-own-property-names-should-not-clear-previous-results.js.ftl-eager-no-cjit-b3o1 stress/proxy-get-own-property-names-should-not-clear-previous-results.js.no-cjit-collect-continuously stress/proxy-get-own-property-names-should-not-clear-previous-results.js.ftl-no-cjit-small-pool stress/proxy-get-own-property-names-should-not-clear-previous-results.js.ftl-no-cjit-no-put-stack-validate stress/proxy-get-own-property-names-should-not-clear-previous-results.js.no-llint stress/proxy-get-own-property-names-should-not-clear-previous-results.js.ftl-no-cjit-validate-sampling-profiler stress/proxy-get-own-property-names-should-not-clear-previous-results.js.default stress/proxy-get-own-property-names-should-not-clear-previous-results.js.no-ftl stress/proxy-get-own-property-names-should-not-clear-previous-results.js.ftl-eager-no-cjit stress/proxy-get-own-property-names-should-not-clear-previous-results.js.bytecode-cache stress/proxy-get-own-property-names-should-not-clear-previous-results.js.dfg-maximal-flush-validate-no-cjit apiTests
jsc-armv7 EWS
Comment 5
2019-05-22 18:20:13 PDT
Comment on
attachment 370448
[details]
Patch
Attachment 370448
[details]
did not pass jsc-armv7-ews (jsc-only): Output:
https://webkit-queues.webkit.org/results/12263232
New failing tests: stress/proxy-get-own-property-names-should-not-clear-previous-results.js.dfg-eager-no-cjit-validate stress/proxy-get-own-property-names-should-not-clear-previous-results.js.no-cjit-validate-phases stress/proxy-get-own-property-names-should-not-clear-previous-results.js.dfg-eager stress/proxy-get-own-property-names-should-not-clear-previous-results.js.no-cjit-collect-continuously stress/proxy-get-own-property-names-should-not-clear-previous-results.js.default stress/proxy-get-own-property-names-should-not-clear-previous-results.js.no-llint stress/proxy-get-own-property-names-should-not-clear-previous-results.js.dfg-maximal-flush-validate-no-cjit apiTests
Tadeu Zagallo
Comment 6
2019-05-22 23:26:51 PDT
Created
attachment 370492
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2019-05-23 00:06:27 PDT
Comment on
attachment 370492
[details]
Patch for landing Clearing flags on attachment: 370492 Committed
r245675
: <
https://trac.webkit.org/changeset/245675
>
WebKit Commit Bot
Comment 8
2019-05-23 00:06:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2019-05-23 00:07:20 PDT
<
rdar://problem/51057937
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug